--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: minima # 「jekyll-theme-minima」から「minima」に変更
 title: 東佑貴の備忘録
 description: 私の個人的な備忘録とブログです。
+header_pages:
+  - index.md
+  - notes.md
+  - about.md
